--- a/templates/base.html
+++ b/templates/base.html
@@ -11,5 +11,10 @@
 
   <body>
     {{ body | safe }}
+
+    <hr />
+    © 2021 <a href="mailto:nbishop@nbishop.net">Nicholas Bishop</a>
+    •
+    <a href="index.html">Home</a>
   </body>
 </html>
