--- a/templates/base.html
+++ b/templates/base.html
@@ -16,5 +16,7 @@
     © 2021 <a href="mailto:nbishop@nbishop.net">Nicholas Bishop</a>
     •
     <a href="index.html">Home</a>
+    •
+    <a href="https://github.com/nicholasbishop/nbishop-net">Repo</a>
   </body>
 </html>
