--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,10 @@ pre {
     border: 1px solid #999;
     padding: 0.5em;
 }
+
+#license {
+    font-size: 0.8em;
+    color: #777;
+
+    margin-top: 1em;
+}
