--- a/templates/base.html
+++ b/templates/base.html
@@ -18,5 +18,15 @@
     <a href="index.html">Home</a>
     •
     <a href="https://github.com/nicholasbishop/nbishop-net">Repo</a>
+
+    <!-- License -->
+    <div id="license">
+      Unless otherwise noted, content is licensed under
+      <a href="https://creativecommons.org/licenses/by/4.0">CC BY 4.0</a>.
+      Code blocks are <em>additionally</em> available under
+      <a href="https://creativecommons.org/share-your-work/public-domain/cc0">CC0</a> and
+      <a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License version 2.0</a>
+      at your option.
+    </div>
   </body>
 </html>
