--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
 
     <title>{{ title }}</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="favicon.png" />
   </head>
 
   <body>
