--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,13 @@ pre {
 
     margin-top: 1em;
 }
+
+h1 {
+    background-image: url("h1.png"); 
+    background-size: 100% 100%;
+    color: #fff;
+    text-shadow: 0px 0px 4px #339;
+
+    padding: 0.2em;
+    padding-left: 0.4em;
+}
