--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,17 @@ h1 {
     color: #fff;
     text-shadow: 0px 0px 4px #339;
 
+    border-top: 2px solid #fcc;
+    border-bottom: 2px solid #ccf;
+
     padding: 0.2em;
     padding-left: 0.4em;
+}
+
+hr {
+    border: none;
+    border-top: 2px solid #fcc;
+    border-bottom: 2px solid #ccf;
 }
 
 #sfc {
