--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+    <h1>{{ title }}</h1>
+    {% if show_home_link -%}
+    <a href="index.html">« Home</a>
+    {% endif -%}
+
     {{ body | safe }}
 
     <hr />
