--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,10 @@ hr {
     border: 1px solid #ccc;
 }
 
+pre {
+    overflow: scroll;
+}
+
 @media (max-width : 60em) {
     h1 {
         margin-top: 0;
