--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,11 @@ pre {
     overflow: scroll;
 }
 
+ol {
+    /* Cut the padding in half to make the list not be indented. */
+    padding-left: 20px;
+}
+
 @media (max-width : 60em) {
     h1 {
         margin-top: 0;
