--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
   <body>
     <h1>{{ title }}</h1>
     {% if show_home_link -%}
-    <a href="index.html">« Home</a>
+    <a class="content" href="index.html">« Home</a>
     {% endif -%}
 
     <div class="content">
