Disable last-update time, not working

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
     <a class="content" href="index.html">« Home</a>
     <!-- Little hack: only show date if not on the home page -->
     <p>
-      Created {{ created_date }}, last updated {{ updated_date }}
+      Created {{ created_date }}
     </p>
     {% endif -%}
 
