Restore last-modified date

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     {% if show_home_link -%}
     <a class="content" href="index.html">« Home</a>
     <!-- Little hack: only show date if not on the home page -->
-    <p class="content">Created {{ created_date }}</p>
+    <p class="content">Created {{ created_date }}, last updated {{ updated_date }}</p>
     {% endif -%}
 
     <div class="content">
